@@ -91,6 +91,18 @@
         <div id="news">
 	    <h2 class="">News</h2>
 	    
+	    <h3>April 13, 2009</h3>
+	      <b>Stable</b> version 2.26.1 released.<br />
+	      <ul>
+	      <li>Close window when it loses focusy</li>
+	      <li>Fixed #504930, Showing application icon for app launchers</li>
+	      <li>Fixed #552843, if the search has no result, the result list is not blanked</li>
+	      <li>Fixed #577487, identi.ca plugin incorrectly shows amount of remaining symbols</li>
+	      <li>Fixed #578803, deskbar-applet incorrectly installs to pythondir rather than pyexecdir</li>
+	      <li>Removed unused variable PYTHONDIR</li>
+	      </ul>
+	      <a href="download.html">Download it</a>
+	      
 	    <h3>March 17, 2009</h3>
 	      <b>Stable</b> version 2.26.0 released.<br />
 	      <ul>
