@@ -1,3 +1,9 @@
+2009-04-13	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.26.1 release
+
 2009-03-17	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* download.html:
